objects/MyHomeRocksTimes__c.object
<CustomObject>
    <description>My Home Rocks desc</description>
    <fields>
        <fullName>Aadhar_Number__c</fullName>
        <label>Aadhar Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>Alcon_AR__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Available__c</fullName>
        <label>Discount Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <formula>IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Web&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 30000, 
 
IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Event&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 50000, 
 
 
IF( AND(
 
 ISPICKVAL(Discount_Type__c, &apos;Manager&apos;) ,
 
ISPICKVAL(Discount_Available__c, &apos;Yes&apos;)
 
) , 150000, 0)
 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F_H_Name__c</fullName>
        <label>F/H Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MyHomeRocksTime</label>
    <nameField>
        <label>Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyHomeRocksTimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>